@@ -8,11 +8,12 @@
  * JPEG specific handler.
  * Inherits most stuff from BitmapHandler, just here to do the metadata handler differently.
  *
- * Metadata stuff common to Jpeg and built-in Tiff (not PagedTiffHandler) is in JpegOrTiffHandler.
+ * Metadata stuff common to Jpeg and built-in Tiff (not PagedTiffHandler) is
+ * in ExifBitmapHandler.
  *
  * @ingroup Media
  */
-class JpegHandler extends JpegOrTiffHandler {
+class JpegHandler extends ExifBitmapHandler {
 
 	function getMetadata ( $image, $filename ) {
 		try {
@@ -28,7 +29,7 @@ class JpegHandler extends JpegOrTiffHandler {
 			// BitmapMetadataHandler throws an exception in certain exceptional cases like if file does not exist.
 			wfDebug( __METHOD__ . ': ' . $e->getMessage() . "\n" );
 
-			/* This used to use 0 (JpegOrTiffHandler::OLD_BROKEN_FILE) for the cases
+			/* This used to use 0 (ExifBitmapHandler::OLD_BROKEN_FILE) for the cases
 			 * 	* No metadata in the file
 			 * 	* Something is broken in the file.
 			 * However, if the metadata support gets expanded then you can't tell if the 0 is from
@@ -37,7 +38,7 @@ class JpegHandler extends JpegOrTiffHandler {
 			 * Thus switch to using -1 to denote only a broken file, and use an array with only
 			 * MEDIAWIKI_EXIF_VERSION to denote no props.
 			 */
-			return JpegOrTiffHandler::BROKEN_FILE;
+			return ExifBitmapHandler::BROKEN_FILE;
 		}
 	}
 
